{src,tools}/Makefile: allow setting {C,LD}FLAGS
This change keeps the flags required for Gtk+ while easily allowing
different CFLAGS and LDFLAGS to be used.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,11 +3,13 @@ PREFIX	= /usr/local
 BINDIR	= $(PREFIX)/bin
 CPPFLAGS= -D_FORTIFY_SOURCE=2
 #for Gtk+ 2
-#CFLAGS	= -W -Wall -g -O2 `pkg-config --cflags gtk+-2.0`
-#LDFLAGS= `pkg-config --libs gtk+-2.0`
+#CFLAGSF= `pkg-config --cflags gtk+-2.0`
+#LDFLAGSF= `pkg-config --libs gtk+-2.0`
 #for Gtk+ 3
-CFLAGS	= -W -Wall -g -O2 `pkg-config --cflags gtk+-3.0`
-LDFLAGS	= `pkg-config --libs gtk+-3.0`
+CFLAGSF	= `pkg-config --cflags gtk+-3.0`
+LDFLAGSF= `pkg-config --libs gtk+-3.0`
+CFLAGS	= -W -Wall -g -O2
+LDFLAGS	=
 INSTALL	= install
 MKDIR	= mkdir -p
 RM	= rm -f
@@ -16,22 +18,22 @@ OBJS	= builders.o callbacks.o common.o gbsddialog.o main.o
 all: $(TARGETS)
 
 gbsddialog: $(OBJS)
-	$(CC) $(LDFLAGS) -o gbsddialog $(OBJS)
+	$(CC) $(LDFLAGSF) $(LDFLAGS) -o gbsddialog $(OBJS)
 
 builders.o: builders.c builders.h callbacks.h common.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o builders.o -c builders.c
+	$(CC) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS) -o builders.o -c builders.c
 
 callbacks.o: callbacks.c callbacks.h common.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o callbacks.o -c callbacks.c
+	$(CC) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS) -o callbacks.o -c callbacks.c
 
 common.o: common.c common.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o common.o -c common.c
+	$(CC) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS) -o common.o -c common.c
 
 gbsddialog.o: gbsddialog.c builders.h common.h gbsddialog.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o gbsddialog.o -c gbsddialog.c
+	$(CC) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS) -o gbsddialog.o -c gbsddialog.c
 
 main.o: main.c common.h gbsddialog.h
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o main.o -c main.c
+	$(CC) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS) -o main.o -c main.c
 
 clean:
 	$(RM) $(OBJS)
