Xdialog: implement --print
This adds a dependency on libm for Xdialog.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,7 +4,7 @@ BINDIR	= $(PREFIX)/bin
 CPPFLAGS= -D_FORTIFY_SOURCE=2
 CFLAGSF	= `pkg-config --cflags gtk+-3.0`
 CFLAGS	= -W -Wall -g -O2 -fstack-protector
-LDFLAGSF= `pkg-config --libs gtk+-3.0`
+LDFLAGSF= `pkg-config --libs gtk+-3.0` -lm
 LDFLAGS	=
 INSTALL	= install
 MKDIR	= mkdir -p
