Xdialog: generate the Xdialog.1 manual page

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,11 +1,25 @@
+PROJECT	= gbsddialog
+VERSION	= 0.0.1
+TARGETS	= Xdialog.1
 PREFIX	= /usr/local
+BINDIR	= $(PREFIX)/bin
 DATADIR	= $(PREFIX)/share
 MANDIR	= $(DATADIR)/man
 INSTALL	= install
 MKDIR	= mkdir -p
 RM	= rm -f
+SED	= sed
 
-all:
+all: $(TARGETS)
+
+Xdialog.1: Xdialog.1.in
+	$(SED) -e s,%%project%%,$(PROJECT), \
+		-e s,%%version%%,$(VERSION), \
+		-e s,%%prefix%%,$(PREFIX), \
+		-e s,%%bindir%%,$(BINDIR), \
+		-e s,%%datadir%%,$(DATADIR), \
+		-e s,%%mandir%%,$(MANDIR), \
+		Xdialog.1.in > Xdialog.1 || $(RM) Xdialog.1
 
 clean:
 	$(RM) $(OBJS)
