--- a/doc/Xdialog.1.in
+++ b/doc/Xdialog.1.in
@@ -1,4 +1,4 @@
-.TH "Xdialog" "1" "%%version%%" "Thierry Godefroy" "X11/tool"
+.TH "Xdialog" "1" "%%version%%" "Pierre Pronchery" "X11/tool"
 .SH "NAME"
 .LP
 Xdialog \- (c)dialog replacement for X\-Windows
@@ -270,9 +270,9 @@ Note that when chaining dialogs, the chain is broken and Xdialog terminates as s
 .br
 \fI%%mandir%%/man1/Xdialog.1*\fP
 .br
-\fI%%datadir%%/doc/Xdialog\-%%version%%/*\fP
+\fI%%datadir%%/doc/%%project%%/*\fP
 .br
-\fI%%datadir%%/doc/Xdialog\-%%version%%/samples/*\fP
+\fI%%datadir%%/doc/%%project%%/samples/*\fP
 .SH "ENVIRONMENT VARIABLES"
 .LP
 \fIXDIALOG_HIGH_DIALOG_COMPAT\fR
@@ -306,16 +306,16 @@ See the notes about \fBXDIALOG_HIGH_DIALOG_COMPAT\fR above.
 Setting this variable to 1 will prevent the Gdk, GLib and Gtk library from emitting messages via g_log().
 .SH "EXAMPLES"
 .LP
-Sample scripts are available in the \fI%%datadir%%/doc/Xdialog\-%%version%%/samples/\fR directory.
+Sample scripts are available in the \fI%%datadir%%/doc/%%project%%/samples/\fR directory.
 .br
-Full HTML doc with screen shots, examples and FAQ is available in the \fI%%datadir%%/doc/Xdialog\-%%version%%/\fR directory.
+Full HTML doc with screen shots, examples and FAQ is available in the \fI%%datadir%%/doc/%%project%%/\fR directory.
 .SH "AUTHORS"
 .LP
-Thierry Godefroy <xdialog@free.fr> (from v1.1.0 onwards)
+Thierry Godefroy <xdialog@free.fr> (from original v1.1.0 onwards)
 .br
-Alfred Reynolds <alfred@cyberone.com.au> (v1.0 only)
+Alfred Reynolds <alfred@cyberone.com.au> (original v1.0 only)
 .br
-Pierre Pronchery <khorben@defora.org> (re-implementation)
+Pierre Pronchery <khorben@defora.org> (re-implementation from %%project%%) with sponsorship from the FreeBSD Foundation
 .SH "SEE ALSO"
 .LP
 dialog(1), cdialog(1)
