Xdialog: install the documentation samples

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,12 @@
 PROJECT	= gbsddialog
 VERSION	= 0.0.1
 TARGETS	= Xdialog.1
+SAMPLES	= Xdialog.wrapper.c Xmessage Xmore allrpms bluebox.rc buildlist \
+	  calendar chain checklist dselect editbox fixed-font.rc format1440 \
+	  fselect gauge infobox infobox2 inputbox install-wrapper kernel \
+	  logbox logbox2 login menubox msgbox no-entry.xpm radiolist rangebox \
+	  set-time tailbox textbox timebox treeview warning.xpm xlock-wrapper \
+	  yesno
 PREFIX	= /usr/local
 BINDIR	= $(PREFIX)/bin
 DATADIR	= $(PREFIX)/share
@@ -28,11 +34,20 @@ distclean: clean
 	$(RM) $(TARGETS)
 
 install:
+	$(MKDIR) $(DATADIR)/doc/$(PROJECT)/samples
+	for sample in $(SAMPLES); do \
+		mode=0644; [ -x samples/$$sample ] && mode=0755; \
+		$(INSTALL) -m $$mode samples/$$sample \
+			$(DATADIR)/doc/$(PROJECT)/samples/$$sample; \
+	done
 	$(MKDIR) $(MANDIR)/man1
 	$(INSTALL) -m 0644 gbsddialog.1 $(MANDIR)/man1/gbsddialog.1
 	$(INSTALL) -m 0644 Xdialog.1 $(MANDIR)/man1/Xdialog.1
 
 uninstall:
+	for sample in $(SAMPLES); do \
+		$(RM) $(DATADIR)/doc/$(PROJECT)/samples/$$sample; \
+	done
 	$(RM) $(MANDIR)/man1/gbsddialog.1
 	$(RM) $(MANDIR)/man1/Xdialog.1
 
