gbsddialog: improve the Makefiles
This now always places -lm in the LDFLAGS, so it can easily be removed
(or re-applied) if necessary to change the link-time flags.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ CPPFLAGS= -D_FORTIFY_SOURCE=2
 CFLAGSF	= `pkg-config --cflags gtk+-3.0`
 CFLAGS	= -W -Wall -g -O2 -fstack-protector
 LDFLAGSF= `pkg-config --libs gtk+-3.0`
-LDFLAGS	=
+LDFLAGS	= -lm
 INSTALL	= install
 MKDIR	= mkdir -p -m 0755
 RM	= rm -f
